@@ -1,6 +1,6 @@
 /* Python pretty-printing
 
-   Copyright (C) 2008-2012 Free Software Foundation, Inc.
+   Copyright (C) 2008, 2009, 2010 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -29,18 +29,6 @@
 #ifdef HAVE_PYTHON
 #include "python-internal.h"
 
-/* Return type of print_string_repr.  */
-
-enum string_repr_result
-  {
-    /* The string method returned None.  */
-    string_repr_none,
-    /* The string method had an error.  */
-    string_repr_error,
-    /* Everything ok.  */
-    string_repr_ok
-  };
-
 /* Helper function for find_pretty_printer which iterates over a list,
    calls each function and inspects output.  This will return a
    printer object if one recognizes VALUE.  If no printer is found, it
@@ -61,20 +49,9 @@ search_pp_list (PyObject *list, PyObject *value)
 	return NULL;
 
       /* Skip if disabled.  */
-      if (PyObject_HasAttr (function, gdbpy_enabled_cst))
-	{
-	  PyObject *attr = PyObject_GetAttr (function, gdbpy_enabled_cst);
-	  int cmp;
-
-	  if (!attr)
-	    return NULL;
-	  cmp = PyObject_IsTrue (attr);
-	  if (cmp == -1)
-	    return NULL;
-
-	  if (!cmp)
-	    continue;
-	}
+      if (PyObject_HasAttr (function, gdbpy_enabled_cst)
+	  && ! PyObject_IsTrue (PyObject_GetAttr (function, gdbpy_enabled_cst)))
+	continue;
 
       printer = PyObject_CallFunctionObjArgs (function, value, NULL);
       if (! printer)
@@ -161,7 +138,7 @@ find_pretty_printer_from_gdb (PyObject *value)
   PyObject *pp_list;
   PyObject *function;
 
-  /* Fetch the global pretty printer list.  */
+  /* Fetch the global pretty printer dictionary.  */
   if (! PyObject_HasAttrString (gdb_module, "pretty_printers"))
     Py_RETURN_NONE;
   pp_list = PyObject_GetAttrString (gdb_module, "pretty_printers");
@@ -185,20 +162,20 @@ find_pretty_printer (PyObject *value)
 {
   PyObject *function;
 
-  /* Look at the pretty-printer list for each objfile
+  /* Look at the pretty-printer dictionary for each objfile
      in the current program-space.  */
   function = find_pretty_printer_from_objfiles (value);
   if (function == NULL || function != Py_None)
     return function;
   Py_DECREF (function);
 
-  /* Look at the pretty-printer list for the current program-space.  */
+  /* Look at the pretty-printer dictionary for the current program-space.  */
   function = find_pretty_printer_from_progspace (value);
   if (function == NULL || function != Py_None)
     return function;
   Py_DECREF (function);
 
-  /* Look at the pretty-printer list in the gdb module.  */
+  /* Look at the pretty-printer dictionary in the gdb module.  */
   function = find_pretty_printer_from_gdb (value);
   return function;
 }
@@ -208,8 +185,8 @@ find_pretty_printer (PyObject *value)
    is returned.  If the function returns Py_NONE that means the pretty
    printer returned the Python None as a value.  Otherwise, if the
    function returns a value,  *OUT_VALUE is set to the value, and NULL
-   is returned.  On error, *OUT_VALUE is set to NULL, NULL is
-   returned, with a python exception set.  */
+   is returned.  On error, *OUT_VALUE is set to NULL, and NULL is
+   returned.  */
 
 static PyObject *
 pretty_print_one_value (PyObject *printer, struct value **out_value)
@@ -255,11 +232,7 @@ gdbpy_get_display_hint (PyObject *printer)
   if (hint)
     {
       if (gdbpy_is_string (hint))
-	{
-	  result = python_string_to_host_string (hint);
-	  if (result == NULL)
-	    gdbpy_print_stack ();
-	}
+	result = python_string_to_host_string (hint);
       Py_DECREF (hint);
     }
   else
@@ -268,40 +241,12 @@ gdbpy_get_display_hint (PyObject *printer)
   return result;
 }
 
-/* A wrapper for gdbpy_print_stack that ignores MemoryError.  */
-
-static void
-print_stack_unless_memory_error (struct ui_file *stream)
-{
-  if (PyErr_ExceptionMatches (gdbpy_gdb_memory_error))
-    {
-      struct cleanup *cleanup;
-      PyObject *type, *value, *trace;
-      char *msg;
-
-      PyErr_Fetch (&type, &value, &trace);
-      cleanup = make_cleanup_py_decref (type);
-      make_cleanup_py_decref (value);
-      make_cleanup_py_decref (trace);
-
-      msg = gdbpy_exception_to_string (type, value);
-      make_cleanup (xfree, msg);
-
-      if (msg == NULL || *msg == '\0')
-	fprintf_filtered (stream, _("<error reading variable>"));
-      else
-	fprintf_filtered (stream, _("<error reading variable: %s>"), msg);
-
-      do_cleanups (cleanup);
-    }
-  else
-    gdbpy_print_stack ();
-}
-
 /* Helper for apply_val_pretty_printer which calls to_string and
-   formats the result.  */
-
-static enum string_repr_result
+   formats the result.  If the value returnd is Py_None, nothing is
+   printed and the function returns a 1; in all other cases data is
+   printed as given by the pretty printer and the function returns 0.
+*/
+static int
 print_string_repr (PyObject *printer, const char *hint,
 		   struct ui_file *stream, int recurse,
 		   const struct value_print_options *options,
@@ -310,61 +255,58 @@ print_string_repr (PyObject *printer, const char *hint,
 {
   struct value *replacement = NULL;
   PyObject *py_str = NULL;
-  enum string_repr_result result = string_repr_ok;
+  int is_py_none = 0;
 
   py_str = pretty_print_one_value (printer, &replacement);
   if (py_str)
     {
-      struct cleanup *cleanup = make_cleanup_py_decref (py_str);
-
       if (py_str == Py_None)
-	result = string_repr_none;
-      else if (gdbpy_is_lazy_string (py_str))
+	is_py_none = 1;
+      else
 	{
-	  CORE_ADDR addr;
+	  gdb_byte *output = NULL;
 	  long length;
 	  struct type *type;
 	  char *encoding = NULL;
-	  struct value_print_options local_opts = *options;
+	  PyObject *string = NULL;
+	  int is_lazy;
 
-	  make_cleanup (free_current_contents, &encoding);
-	  gdbpy_extract_lazy_string (py_str, &addr, &type,
-				     &length, &encoding);
-
-	  local_opts.addressprint = 0;
-	  val_print_string (type, encoding, addr, (int) length,
-			    stream, &local_opts);
-	}
-      else
-	{
-	  PyObject *string;
-
-	  string = python_string_to_target_python_string (py_str);
-	  if (string)
+	  is_lazy = gdbpy_is_lazy_string (py_str);
+	  if (is_lazy)
+	    output = gdbpy_extract_lazy_string (py_str, &type, &length, &encoding);
+	  else
 	    {
-	      gdb_byte *output;
-	      long length;
-	      struct type *type;
-
-	      make_cleanup_py_decref (string);
-	      output = PyString_AsString (string);
-	      length = PyString_Size (string);
-	      type = builtin_type (gdbarch)->builtin_char;
-
-	      if (hint && !strcmp (hint, "string"))
-		LA_PRINT_STRING (stream, type, output, length, NULL,
+	      string = python_string_to_target_python_string (py_str);
+	      if (string)
+		{
+		  output = PyString_AsString (string);
+		  length = PyString_Size (string);
+		  type = builtin_type (gdbarch)->builtin_char;
+		}
+	      else
+		gdbpy_print_stack ();
+	      
+	    }
+	
+	  if (output)
+	    {
+	      if (is_lazy || (hint && !strcmp (hint, "string")))
+		LA_PRINT_STRING (stream, type, output, length, encoding,
 				 0, options);
 	      else
 		fputs_filtered (output, stream);
 	    }
 	  else
-	    {
-	      result = string_repr_error;
-	      print_stack_unless_memory_error (stream);
-	    }
+	    gdbpy_print_stack ();
+	  
+	  if (string)
+	    Py_DECREF (string);
+	  else
+	    xfree (output);
+      
+	  xfree (encoding);
+	  Py_DECREF (py_str);
 	}
-
-      do_cleanups (cleanup);
     }
   else if (replacement)
     {
@@ -374,12 +316,9 @@ print_string_repr (PyObject *printer, const char *hint,
       common_val_print (replacement, stream, recurse, &opts, language);
     }
   else
-    {
-      result = string_repr_error;
-      print_stack_unless_memory_error (stream);
-    }
+    gdbpy_print_stack ();
 
-  return result;
+  return is_py_none;
 }
 
 static void
@@ -394,7 +333,7 @@ py_restore_tstate (void *p)
 /* Create a dummy PyFrameObject, needed to work around
    a Python-2.4 bug with generators.  */
 static PyObject *
-push_dummy_python_frame (void)
+push_dummy_python_frame ()
 {
   PyObject *empty_string, *null_tuple, *globals;
   PyCodeObject *code;
@@ -485,7 +424,7 @@ print_children (PyObject *printer, const char *hint,
 					 NULL);
   if (! children)
     {
-      print_stack_unless_memory_error (stream);
+      gdbpy_print_stack ();
       return;
     }
 
@@ -494,22 +433,14 @@ print_children (PyObject *printer, const char *hint,
   iter = PyObject_GetIter (children);
   if (!iter)
     {
-      print_stack_unless_memory_error (stream);
+      gdbpy_print_stack ();
       goto done;
     }
   make_cleanup_py_decref (iter);
 
   /* Use the prettyprint_arrays option if we are printing an array,
      and the pretty option otherwise.  */
-  if (is_array)
-    pretty = options->prettyprint_arrays;
-  else
-    {
-      if (options->pretty == Val_prettyprint)
-	pretty = 1;
-      else
-	pretty = options->prettyprint_structs;
-    }
+  pretty = is_array ? options->prettyprint_arrays : options->pretty;
 
   /* Manufacture a dummy Python frame to work around Python 2.4 bug,
      where it insists on having a non-NULL tstate->frame when
@@ -526,13 +457,13 @@ print_children (PyObject *printer, const char *hint,
   for (i = 0; i < options->print_max; ++i)
     {
       PyObject *py_v, *item = PyIter_Next (iter);
-      const char *name;
+      char *name;
       struct cleanup *inner_cleanup;
 
       if (! item)
 	{
 	  if (PyErr_Occurred ())
-	    print_stack_unless_memory_error (stream);
+	    gdbpy_print_stack ();
 	  /* Set a flag so we can know whether we printed all the
 	     available elements.  */
 	  else	  
@@ -602,32 +533,28 @@ print_children (PyObject *printer, const char *hint,
 	  fputs_filtered (" = ", stream);
 	}
 
-      if (gdbpy_is_lazy_string (py_v))
+      if (gdbpy_is_lazy_string (py_v) || gdbpy_is_string (py_v))
 	{
-	  CORE_ADDR addr;
-	  struct type *type;
-	  long length;
-	  char *encoding = NULL;
-	  struct value_print_options local_opts = *options;
+	  gdb_byte *output = NULL;
 
-	  make_cleanup (free_current_contents, &encoding);
-	  gdbpy_extract_lazy_string (py_v, &addr, &type, &length, &encoding);
+	  if (gdbpy_is_lazy_string (py_v))
+	    {
+	      struct type *type;
+	      long length;
+	      char *encoding = NULL;
 
-	  local_opts.addressprint = 0;
-	  val_print_string (type, encoding, addr, (int) length, stream,
-			    &local_opts);
-
-	  do_cleanups (inner_cleanup);
-	}
-      else if (gdbpy_is_string (py_v))
-	{
-	  gdb_byte *output;
-
-	  output = python_string_to_host_string (py_v);
-	  if (!output)
-	    gdbpy_print_stack ();
+	      output = gdbpy_extract_lazy_string (py_v, &type,
+						  &length, &encoding);
+	      if (!output)
+		gdbpy_print_stack ();
+	      LA_PRINT_STRING (stream, type, output, length, encoding,
+			       0, options);
+	      xfree (encoding);
+	      xfree (output);
+	    }
 	  else
 	    {
+	      output = python_string_to_host_string (py_v);
 	      fputs_filtered (output, stream);
 	      xfree (output);
 	    }
@@ -689,12 +616,7 @@ apply_val_pretty_printer (struct type *type, const gdb_byte *valaddr,
   char *hint = NULL;
   struct cleanup *cleanups;
   int result = 0;
-  enum string_repr_result print_result;
-
-  /* No pretty-printer support for unavailable values.  */
-  if (!value_bytes_available (val, embedded_offset, TYPE_LENGTH (type)))
-    return 0;
-
+  int is_py_none = 0;
   cleanups = ensure_python_env (gdbarch, language);
 
   /* Instantiate the printer.  */
@@ -702,14 +624,16 @@ apply_val_pretty_printer (struct type *type, const gdb_byte *valaddr,
     valaddr += embedded_offset;
   value = value_from_contents_and_address (type, valaddr,
 					   address + embedded_offset);
-
-  set_value_component_location (value, val);
-  /* set_value_component_location resets the address, so we may
-     need to set it again.  */
-  if (VALUE_LVAL (value) != lval_internalvar
-      && VALUE_LVAL (value) != lval_internalvar_component
-      && VALUE_LVAL (value) != lval_computed)
-    set_value_address (value, address + embedded_offset);
+  if (val != NULL)
+    {
+      set_value_component_location (value, val);
+      /* set_value_component_location resets the address, so we may
+	 need to set it again.  */
+      if (VALUE_LVAL (value) != lval_internalvar
+	  && VALUE_LVAL (value) != lval_internalvar_component
+	  && VALUE_LVAL (value) != lval_computed)
+	set_value_address (value, address + embedded_offset);
+    }
 
   val_obj = value_to_value_object (value);
   if (! val_obj)
@@ -727,18 +651,17 @@ apply_val_pretty_printer (struct type *type, const gdb_byte *valaddr,
   make_cleanup (free_current_contents, &hint);
 
   /* Print the section */
-  print_result = print_string_repr (printer, hint, stream, recurse,
-				    options, language, gdbarch);
-  if (print_result != string_repr_error)
-    print_children (printer, hint, stream, recurse, options, language,
-		    print_result == string_repr_none);
+  is_py_none = print_string_repr (printer, hint, stream, recurse,
+				  options, language, gdbarch);
+  print_children (printer, hint, stream, recurse, options, language,
+		  is_py_none);
 
   result = 1;
 
 
  done:
   if (PyErr_Occurred ())
-    print_stack_unless_memory_error (stream);
+    gdbpy_print_stack ();
   do_cleanups (cleanups);
   return result;
 }
@@ -755,8 +678,7 @@ apply_val_pretty_printer (struct type *type, const gdb_byte *valaddr,
    NULL.  */
 PyObject *
 apply_varobj_pretty_printer (PyObject *printer_obj,
-			     struct value **replacement,
-			     struct ui_file *stream)
+			     struct value **replacement)
 {
   PyObject *py_str = NULL;
 
@@ -764,7 +686,7 @@ apply_varobj_pretty_printer (PyObject *printer_obj,
   py_str = pretty_print_one_value (printer_obj, replacement);
 
   if (*replacement == NULL && py_str == NULL)
-    print_stack_unless_memory_error (stream);
+    gdbpy_print_stack ();
 
   return py_str;
 }
